# PyDyno

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.test.yml  pyproject.toml  run_integration_tests.sh
src/pydyno/: __init__.py
src/pydyno/adapters/: __init__.py  kafka.py  postgresql.py
src/pydyno/core/: adapters.py  exceptions.py  manager.py  pool_config.py  utils.py
src/pydyno/scripts/: test_integration.py  test_postgres_adapter.py  test_pydyno_basic.py
tests/: README.md
tests/sql/: init.sql
