[project]
name = "pydyno"
version = "0.1.0"
description = "A simple pool connection manager based off of Netflix's Dyno package, but for Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs>=25.3.0",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
